infra/kubernetes/keycloak/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak
  namespace: keycloak
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - keycloak.cledyu.local
      secretName: keycloak-tls
  rules:
    - host: keycloak.cledyu.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cledyu-keycloak-service
                port:
                  number: 8080
